no non clients in _NET_CLIENT_LIST_STACKING

BUG: 307125
FIXED-IN: 4.9.2
REVIEW: 106526